--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"@replit/database": "^2.0.0",
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
+		"dns": "latest",
 		"express": "^4.17.1",
 		"mongodb": "^3.5.9",
-		"mongoose": "^5.9.27",
-		"cors": "^2.8.5",
-		"body-parser": "^1.19.0"
+		"mongoose": "^5.9.27"
 	},
 	"engines": {
 		"node": "12.18.3"
